--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,9 +1,11 @@
-# This Dockerfile creates the final image to be published to Docker or
-# Azure Container Registry
-# Create a container with the compiled asp.net core app
-FROM microsoft/aspnetcore:2.0
-# Create app directory
+# Build and run tests inside the docker container
+FROM microsoft/dotnet:2.1-sdk
 WORKDIR /app
-# Copy only the deployment artifacts
-COPY /out .
-ENTRYPOINT ["dotnet", "dotnetcore-sample.dll"]
+# copy the contents of agent working directory on host to workdir in container
+COPY . ./
+# dotnet commands to build, test, and publish
+RUN dotnet restore
+RUN dotnet build -c Release
+RUN dotnet test dotnetcore-tests/dotnetcore-tests.csproj -c Release --logger "trx;LogFileName=testresults.trx"
+RUN dotnet publish -c Release -o out
+ENTRYPOINT dotnet dotnetcore-sample/out/dotnetcore-sample.dll
