--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,10 +1,9 @@
-# Build and run tests inside the docker container
+# This Dockerfile creates the final image to be published to Docker or
+# Azure Container Registry
+# Create a container with the compiled asp.net core app
 FROM microsoft/aspnetcore:2.0
+# Create app directory
 WORKDIR /app
-# copy the contents of agent working directory on host to workdir in container
-COPY . ./
-# dotnet commands to build, test, and publish
-RUN dotnet restore
-RUN dotnet build -c Release
-RUN dotnet publish -c Release -o out
-ENTRYPOINT dotnet dotnetcore-sample/out/dotnetcore-sample.dll
+# Copy only the deployment artifacts
+COPY /out .
+ENTRYPOINT ["dotnet", "dotnetcore-sample.dll"]
